# pman

./: CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
assets/: blog.js  main.css  main.js  styles.css
docs/: INSTALL.md  cli.md  development.md  index.html
pman_mcp/: __init__.py  __main__.py  bridge.py  gating.py  server.py
resources/: AGENTS.md  CLAUDE.md
resources/launchd/: com.divanv.pman.serve.plist  install.sh
resources/skills/para-notes/: SKILL.md
resources/skills/project/: SKILL.md
resources/skills/project-structure/: SKILL.md
src/: lib.rs  main.rs  mcp.rs  serve.rs
tests_python/: test_bridge.py  test_gating.py  test_integration_gating.py  test_main.py
