[package]
name = "pman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
comrak = { version = "0.34", default-features = false, features = ["syntect"] }
regex = "1.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
tempfile = "3.10"
