[package]
name = "pman"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
regex = "1.10"
rmcp = { version = "0.8", features = ["server", "macros", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.10"
