[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pman-mcp"
version = "0.1.0"
description = "Hybrid MCP server for pman that proxies tool calls to the Rust pman CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.0.0",
]

[project.scripts]
pman-mcp = "pman_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["pman_mcp"]
